# fahem

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  INITIALIZE_WITH_CLAUDE_CODE.md  MANIFEST.md  MASTER_PROMPT.md  Makefile  README.md  SECURITY.md  UPLOAD_TO_GITHUB.md  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/agents/: arabic-ux-reviewer.md  pdf-rag-engineer.md  product-architect.md  qa-reviewer.md  security-reviewer.md
.claude/hooks/: block-dangerous.sh
.claude/rules/: architecture.md  backend.md  documentation.md  frontend.md  security-privacy.md  testing.md
.claude/skills/implement-slice/: SKILL.md
.claude/skills/plan-slice/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.claude/skills/verify-release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  repository-validation.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: __init__.py
apps/api/app/core/: config.py
apps/api/migrations/: env.py
apps/api/tests/: test_health.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/worker/: pyproject.toml
apps/worker/tests/: test_ping.py
apps/worker/worker/: __init__.py  celery_app.py
apps/worker/worker/tasks/: ping.py
contracts/: openapi.yaml
docs/: 01_PRD.md  02_MVP_SCOPE.md  03_ARCHITECTURE.md  04_DATA_MODEL.md  05_API_CONTRACTS.md  06_PDF_RAG_PIPELINE.md  07_AI_GROUNDING_AND_PROMPTS.md  08_ARABIC_UX.md  09_SECURITY_AND_PRIVACY.md  10_TESTING_AND_EVALUATION.md  11_IMPLEMENTATION_PLAN.md  12_ACCEPTANCE_CRITERIA.md  13_DEPLOYMENT_AND_OPERATIONS.md  14_RISKS_AND_DECISIONS.md  15_GITHUB_WORKFLOW.md  16_CLAUDE_CODE_WORKING_METHOD.md  17_OPENROUTER_IMPLEMENTATION_NOTES.md  TRACEABILITY_MATRIX.md
docs/adr/: 0000-template.md  0001-monorepo-and-tooling.md
infra/: api.Dockerfile  docker-compose.yml  web.Dockerfile  worker.Dockerfile
schemas/: answer.schema.json  flashcards.schema.json  learning-map.schema.json  quiz.schema.json  summary.schema.json
scripts/: validate-kit.sh
