[project]
name = "fahem-api"
version = "0.1.0"
description = "Fahem AI API — FastAPI service for anonymous, session-only PDF learning."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "pydantic==2.10.*",
    "pydantic-settings==2.7.*",
    "sqlalchemy==2.0.*",
    "psycopg[binary]==3.2.*",
    "alembic==1.14.*",
    "pgvector==0.3.*",
]

[dependency-groups]
dev = [
    "ruff==0.8.*",
    "mypy==1.14.*",
    "pytest==8.*",
    "pytest-asyncio==0.25.*",
    "httpx==0.28.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
